[gd_scene load_steps=18 format=3 uid="uid://brf8k5pgguil7"]

[ext_resource type="Theme" uid="uid://da5e7jd6lyoxp" path="res://fonts/theme.tres" id="1"]
[ext_resource type="Shader" path="res://ui/blur.gdshader" id="2_xyeow"]
[ext_resource type="Script" path="res://ui/GUI.gd" id="3"]
[ext_resource type="FontFile" uid="uid://bepjl3k46ose5" path="res://fonts/Inconsolata-Bold.ttf" id="3_molnl"]
[ext_resource type="Texture2D" uid="uid://cwbi0eemx1rka" path="res://ui/pause.svg" id="5"]
[ext_resource type="PackedScene" uid="uid://b0a3smths6tlk" path="res://ui/inventory/inventory.tscn" id="5_7vef1"]
[ext_resource type="Script" path="res://ui/AchievementNotifier.gd" id="6_1no6y"]
[ext_resource type="Script" path="res://ui/options.gd" id="7_p20rs"]
[ext_resource type="FontFile" path="res://fonts/header_font.tres" id="7_u473c"]
[ext_resource type="Script" path="res://ui/achievements/Achievements.gd" id="9_3ppbk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g7ys4"]
shader = ExtResource("2_xyeow")
shader_parameter/lod = 0.955

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4mya"]
bg_color = Color(0, 0, 0, 0.156863)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6bht4"]
bg_color = Color(0, 0, 0, 0.156863)
corner_detail = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_76oda"]
shader = ExtResource("2_xyeow")
shader_parameter/lod = 2.421

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wa4so"]
bg_color = Color(0.235294, 0.501961, 0.6, 1)
corner_radius_top_left = 56
corner_radius_top_right = 56
corner_radius_bottom_right = 56
corner_radius_bottom_left = 56

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsf5b"]
bg_color = Color(0.12549, 0.301961, 0.368627, 1)
corner_radius_top_left = 56
corner_radius_top_right = 56
corner_radius_bottom_right = 56
corner_radius_bottom_left = 56

[sub_resource type="LabelSettings" id="LabelSettings_2h2hv"]
font = ExtResource("3_molnl")
font_size = 256

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("3")

[node name="Control" type="Control" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_g7ys4")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1")

[node name="Inventory" parent="Control" instance=ExtResource("5_7vef1")]
layout_mode = 2
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = 88.0
offset_top = 568.0
offset_right = 623.0
offset_bottom = 992.0

[node name="Health" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 720.0
offset_top = -93.0
offset_right = 1060.0
offset_bottom = -88.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_q4mya")
theme_override_styles/fill = SubResource("StyleBoxFlat_6bht4")
value = 45.0
show_percentage = false

[node name="AchievementNotifier" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
offset_right = -80.0
offset_bottom = -80.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("6_1no6y")

[node name="BGBlur" type="ColorRect" parent="Control"]
visible = false
material = SubResource("ShaderMaterial_76oda")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pause" type="ColorRect" parent="Control"]
process_mode = 2
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.643137)

[node name="Default" type="Control" parent="Control/Pause"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="Icon" type="TextureRect" parent="Control/Pause/Default"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1630.0
offset_top = 160.0
offset_right = 1720.0
offset_bottom = 260.0
grow_horizontal = 0
texture = ExtResource("5")

[node name="Options" type="VBoxContainer" parent="Control/Pause/Default"]
layout_mode = 0
offset_left = 160.0
offset_top = 160.0
offset_right = 496.0
offset_bottom = 405.0
theme_override_constants/separation = 28
script = ExtResource("7_p20rs")

[node name="Settings" type="Label" parent="Control/Pause/Default/Options"]
layout_mode = 2
mouse_filter = 0
theme_override_fonts/font = ExtResource("7_u473c")
theme_override_font_sizes/font_size = 56
text = "settings"

[node name="Achievements" type="Label" parent="Control/Pause/Default/Options"]
layout_mode = 2
mouse_filter = 0
theme_override_fonts/font = ExtResource("7_u473c")
theme_override_font_sizes/font_size = 56
text = "achievements"

[node name="Quit" type="Label" parent="Control/Pause/Default/Options"]
layout_mode = 2
mouse_filter = 0
theme_override_fonts/font = ExtResource("7_u473c")
theme_override_font_sizes/font_size = 56
text = "quit game"

[node name="Achievements" type="Control" parent="Control/Pause"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="Achievements" type="VBoxContainer" parent="Control/Pause/Achievements"]
layout_mode = 0
offset_left = 160.0
offset_top = 160.0
offset_right = 496.0
offset_bottom = 208.0
theme_override_constants/separation = 42
script = ExtResource("9_3ppbk")

[node name="Settings" type="Control" parent="Control/Pause"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Loading" type="ColorRect" parent="Control"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.396078, 0.705882, 0.827451, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Loading"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -31.5
offset_right = 140.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Loading/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 28
theme_override_fonts/font = ExtResource("3_molnl")
theme_override_font_sizes/font_size = 56
text = "loading..."

[node name="ProgressBar" type="ProgressBar" parent="Control/Loading/VBoxContainer"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_wa4so")
theme_override_styles/fill = SubResource("StyleBoxFlat_xsf5b")
rounded = true

[node name="Hint" type="Label" parent="Control/Loading"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -121.0
offset_right = 368.0
offset_bottom = -80.0
grow_vertical = 0
text = "HINT HINT HINT HINT"
metadata/hints = PackedStringArray("this game was made by a monkey", "[insert \"helpful\" hint here]", "break trees and stuff", "is there hidden text?", "make a magma portal!", "this hint has 27 characters", "planet jikayoor!", "don\'t die!")

[node name="Dead" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.509804, 0.0784314, 0.12549, 0.596078)

[node name="Label" type="Label" parent="Control/Dead"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -136.0
offset_right = 384.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
text = "[dead]"
label_settings = SubResource("LabelSettings_2h2hv")

[connection signal="mouse_entered" from="Control/Pause/Default/Options/Settings" to="Control/Pause/Default/Options" method="_on_settings_mouse_entered"]
[connection signal="mouse_exited" from="Control/Pause/Default/Options/Settings" to="Control/Pause/Default/Options" method="_on_settings_mouse_exited"]
[connection signal="gui_input" from="Control/Pause/Default/Options/Achievements" to="Control/Pause/Default/Options" method="_on_achievements_gui_input"]
[connection signal="mouse_entered" from="Control/Pause/Default/Options/Achievements" to="Control/Pause/Default/Options" method="_on_achievements_mouse_entered"]
[connection signal="mouse_exited" from="Control/Pause/Default/Options/Achievements" to="Control/Pause/Default/Options" method="_on_achievements_mouse_exited"]
[connection signal="mouse_entered" from="Control/Pause/Default/Options/Quit" to="Control/Pause/Default/Options" method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="Control/Pause/Default/Options/Quit" to="Control/Pause/Default/Options" method="_on_quit_mouse_exited"]
